# Minimum-Area-Rectangle

./: README.md
CG_Project/: CG_Project.cpp  CG_Project.qrc  CG_Project.ui  CMakeLists.txt  Convex_Hull.h  Environment.h  Min_Rect.h  README.md  Utils.h  about_CG_Project.html
icons/: Input.qrc
